fix some spacing

--- a/src/_sass/header.scss
+++ b/src/_sass/header.scss
@@ -132,6 +132,7 @@
     // background-color: $color-white;
     padding-left: $spacing-unit * 2 ;
     padding-right: $spacing-unit;
+    padding-top: $spacing-unit;
     display: flex;
     align-items: center;
     justify-content: space-between;
